--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,15 +29,23 @@ authors = [
 dependencies = [
     "jsonschema>=4.17.0",
     "numpy>=1.24.0",
+    "fastapi>=0.109.0",
+    "uvicorn>=0.27.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
+    "pytest-httpx>=0.28.0",
     "black>=23.0.0",
     "mypy>=1.5.0",
     "types-requests>=2.31.0",
+]
+api = [
+    "fastapi>=0.109.0",
+    "uvicorn>=0.27.0",
+    "pytest-httpx>=0.28.0",
 ]
 
 [project.scripts]
