--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "numpy>=1.24.0",
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
+    "tensorflow",
+    "scikit-learn",
 ]
 
 [project.optional-dependencies]
